Fix warning for sonarcloud MU-168